--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1 {
 }
 
 #sojamaggus-wrapper {
+  position: relative;
   display: inline-block;
   text-align: center;
 }
@@ -78,4 +79,5 @@ button {
 button:hover {
   background: #689f38;
 }
+
 
